# ferix-ai-blog

./: .gitmodules  LICENSE.txt  README.md
BitNet/: README.md  bitlinear.py  bitnet.ipynb  bitnet.py
ExecuTorch/: README.md  qat.ipynb  utils.py
ExecuTorch/build_src/: CMakeLists.txt  main.cpp
Gradio/: Dockerfile  app.py  llm.py  requirements.txt  vad.py
Gradio/demo/: demo2.mov
Quotation/: README.md  main.py  schema.py  utils.py
